API changed now uses JSON for input
